--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <link rel='stylesheet' href="layout.css">
     <meta charset="UTF-8">
     <title>Document</title>
+    <body>
     <div id='nav'>
         <ul>
-            <li>Главная</li>
-            <li>Создание сайтов</li>
-            <li>Продвижение сайтов</li>
-            <li>Цены</li>
-            <li>Реклама</li>
-            <li>О компании</li>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Создание сайтов</a></li>
+            <li><a href="">Продвижение сайтов</a></li>
+            <li><a href="">Цены</a></li>
+            <li><a href="">Реклама</a></li>
+            <li><a href="">О компании</a></li>
         </ul>
         <div id='rightsidelogo'>
-            <img src='ico_phone_head.png'>
+            <img src='ico_phone_head.png'alt="Телефон">
             38-097-02-81-069
             <a href="form.html">Заказать звонок</a>
         </div>
     </div>
     <div id="choosemenu">
         <ul>
-            <li>Интернет-магазины</li>
-            <li>Корпоративные сайты</li>
-            <li>Сайт-визитка</li>
-            <li>Landing-page</li>
-            <li>Порталы,Соц-сети</li>
+            <li><a href="">Интернет-магазины</a></li>
+            <li><a href="">Корпоративные сайты</a></li>
+            <li><a href="">Сайт-визитка</a></li>
+            <li><a href="">Landing-page</a></li>
+            <li><a href="іі">Порталы,соц-сети</a></li>
             
         </ul>
     </div>
@@ -34,11 +35,11 @@
         <p> Мы создали для Вас ряд тщательно подобранных пакетов и специальных предложений.
         Выбрав один из представленных вариантов, Вы сэкономите время, деньги и получите результат полностью соответствующий Вашим требованиям! 
         </p>
-        <img src="lend_1.png">
+        <img src="lend_1.png" alt="Тарифные_планы">
         <div id="rightform">
             Звоните:097-25-26-882
                     093-58-23-687
-            <p></p>График работы:
+            <p>График работы:
             Понедельник-Пятница 
             с 10.00 до 18.00 
             Суббота:
@@ -56,7 +57,5 @@
     </div>
     <
 </head>
-<body>
-    
 </body>
 </html>
