--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <a href="">email:zhyhadlo512@gmail.com</a>
         </div>
         <form>
-            <br><input name="nameofcustomer" placeholder="Ваше Имя">
-            <br><input name="surnameofcustomer" placeholder="Ваша Фамилия">
-            <br><input type="number" name="phoneofcustomer" placeholder="Ваш номер телефона">
-           <br><button type="Submit">Отправить данные</button> <button type="reset">Сбросить</button>
+            <br><label>><input name="nameofcustomer" placeholder="Ваше Имя"></label>
+            <br><label><input name="surnameofcustomer" placeholder="Ваша Фамилия"></label>
+            <br><label><input type="number" name="phoneofcustomer" placeholder="Ваш номер телефона"></label>
+           <br><label><button type="Submit">Отправить данные</button> <button type="reset">Сбросить</button>
         </form>
     </div>
 </body>
